profile alignemt bugs solved

--- a/src/components/views/profile_mobile/profile_mobile.css
+++ b/src/components/views/profile_mobile/profile_mobile.css
@@ -11,6 +11,9 @@
   text-align: center;
   padding-top: 5%;
   color: rgb(41, 41, 41);
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
 }
 .profile-name {
   padding-top: 10px;
@@ -22,11 +25,11 @@
 }
 .hline {
   border-left: 2px solid #c5c5c5 !important;
-  margin-top: 3px!important;
-  margin-bottom: 3px!important;
+  margin-top: 3px !important;
+  margin-bottom: 3px !important;
 }
-.profile{
-  margin : 0 auto;
+.profile-settings {
+  margin: 0 auto;
 }
 .settings {
   margin-top: 10px;
